# marimo-wasm-utils

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mise.toml  mkdocs.yml  pyproject.toml  requirements.txt
marimo/: index.html  main.html  main2.html
marimo/assets/: save-worker-D2iQi-UK.js  worker-B38WhSlZ.js
notebooks/: main.py  main2.py
pypi-index/: index.html  packages.json
pypi-index/changelog/: page1.html
pypi-index/pypi/anywidget/: json
pypi-index/pypi/black/: json
pypi-index/pypi/comm/0.2.3/: json
pypi-index/pypi/ipywidgets/8.1.8/: json
pypi-index/pypi/jupyterlab-widgets/3.0.16/: json
pypi-index/pypi/lambda-dev-server/: json
pypi-index/pypi/marimo-base/: json
pypi-index/pypi/markdown/3.6/: json
pypi-index/pypi/mypy-extensions/: json
pypi-index/pypi/narwhals/: json
pypi-index/pypi/pathspec/: json
pypi-index/pypi/platformdirs/4.3.6/: json
pypi-index/pypi/psygnal/: json
pypi-index/pypi/pymdown-extensions/10.8.1/: json
pypi-index/pypi/python-metadata-parser/: json
pypi-index/pypi/sqlglot/: json
pypi-index/pypi/tomli/: json
pypi-index/pypi/widgetsnbextension/: json
pypi-index/simple/: index.html
pypi-index/simple/anywidget/: index.html
pypi-index/simple/black/: index.html
pypi-index/simple/comm/: index.html
pypi-index/simple/ipywidgets/: index.html
pypi-index/simple/jupyterlab-widgets/: index.html
pypi-index/simple/lambda-dev-server/: index.html
pypi-index/simple/marimo-base/: index.html
pypi-index/simple/markdown/: index.html
pypi-index/simple/mypy-extensions/: index.html
pypi-index/simple/narwhals/: index.html
pypi-index/simple/pathspec/: index.html
pypi-index/simple/platformdirs/: index.html
pypi-index/simple/psygnal/: index.html
pypi-index/simple/pymdown-extensions/: index.html
pypi-index/simple/python-metadata-parser/: index.html
pypi-index/simple/sqlglot/: index.html
pypi-index/simple/tomli/: index.html
pypi-index/simple/widgetsnbextension/: index.html
pypi-index/wheels/: lambda_dev_server-0.0.8-py3-none-any.whl  marimo_base-0.23.9-py3-none-any.whl  python_metadata_parser-0.1.3-py3-none-any.whl  sqlglot-26.6.0-py3-none-any.whl
src/marimo_wasm_utils/: cli.py
tests/: scripts_test.py  verify_reroute.py
